EPBDS-5548 Fix: Method invokes inefficient Number constructor